# GraphormerActSel

./: LICENSE  README.md  app.py  app_fastapi.py  infer.py  install.sh  pyproject.toml
bash/: auto_eval.sh  train.sh
checkpoint/: README.md
data/: README.md
envs/: environment.linux.cu118.yml  environment.macos.yml  environment.window.cu118.yml  install_linux_cude.sh  install_windows_cuda.ps1  requirements.linux.cu118.txt
src/analyze/: analyzer.py  auto_eval.py
src/data/: data_wrapper.py
src/data/dataset/: build_predict_data.py  pyg_dataset.py
src/loss/: Losses.py
src/models/: graphormer.py
src/modules/: graphormer_graph_encoder.py  graphormer_graph_encoder_layer.py  graphormer_layers.py  multihead_attention.py  quant_noise.py  soft_sharing.py
src/pretrain/: __init__.py
src/train/: train_reg.py  trainer.py
src/utils/: data_split.py  featurizer.py  mol.py
