[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "graphormer-act-sel"
version = "0.1.0"
description = "Custom Graphormer-based models"
readme = "README.md"
requires-python = ">=3.10,<3.12"
authors = [{ name = "Yonglan Liu" }]
license = { file = "LICENSE" }

dependencies = [
  "omegaconf>=2.3",
  "hydra-core>=1.3",
  "pandas>=2.0",
  "tqdm",
]

[project.optional-dependencies]
# Keep RDKit optional if you sometimes install it via conda-forge (recommended)
chem = ["rdkit-pypi"]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
